[package]
name = "port-warden"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
parking_lot = "0.12"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = { version = "0.30", features = ["multithread"] }
netstat2 = "0.10"
bollard = { version = "0.16", default-features = false, features = ["ssl", "chrono"] }
which = "6"
walkdir = "2"
regex = "1"
webbrowser = "0.8"
arboard = "3"                
axum = { version = "0.7", default-features = false, features = ["http1", "tokio", "json", "query"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
nix = { version = "0.29", default-features = false, features = ["signal"] }
tray-icon = { version = "0.13", optional = true }
tao = { version = "0.27", optional = true }
rfd = { version = "0.14", optional = true }

[features]
default = ["cli"]
kube = []
cli = []
gui = ["tray-icon", "tao", "rfd"]

[build-dependencies]

[target.'cfg(target_os = "linux")'.dependencies]
notify-rust = "4"
